# WebPy_HW14

./: README.md  pyproject.toml
REST/: alembic.ini  comments.py  dump.sql  main.py  test.db
REST/docs/: conf.py  index.rst
REST/docs/_build/doctrees/: environment.pickle  index.doctree
REST/docs/_build/html/: .buildinfo  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
REST/migrations/: env.py
REST/migrations/versions/: 6e19fbdc0ab9_migr_from_sqlite_to_postgres.py  bf002d5ee9d0_initial_migration.py  cd2bcd68998d_confirmed_user.py  fa26dddfb5db_add_avatar_to_user.py
REST/postgres-data/base/16384/: 1247  1249  1259  16385  16388  16390  16392  16398  16399  16401  16403  16416  2224  2579  2604  2606  2608  2610  2620  2656  2657  2658  2659  2662  2663  2664  2665  2666  2667  2673  2674  2678  2679  2699  2701  2702  2703  2704  3455  5002
REST/postgres-data/global/: pg_control
REST/postgres-data/pg_stat/: global.stat
REST/postgres-data/pg_xact/: 0000
REST/src/: schemas.py
REST/src/conf/: config.py  messages.py
REST/src/database/: __init__.py  connect.py  model.py
REST/src/repository/: __init__.py  contacts.py  users.py
REST/src/routes/: __init__.py  auth.py  contacts.py  users.py
REST/src/services/: __init__.py  auth.py  email.py
REST/tests/: conftest.py  test_root.py  test_route_auth.py  test_route_contacts.py  test_services_auth.py  test_services_email.py  test_unit_repository_contacts.py  test_unit_repository_users.py
