[tool.poetry]
name = "web"
version = "0.1.0"
description = ""
authors = ["Your Name <Olga N.>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.1.7"
sqlalchemy = "^2.0.4"
alembic = "^1.9.4"
pydantic = {extras = ["dotenv"], version = "^1.10.5"}
datetime = "^5.0"
fastapi = "^0.92.0"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
python-multipart = "^0.0.6"
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
pillow = "^9.4.0"
uvicorn = {extras = ["standard"], version = "^0.20.0"}
fastapi-mail = "^1.2.6"
psycopg2-binary = "^2.9.5"
cloudinary = "^1.32.0"
fastapi-limiter = "^0.1.5"
python-dotenv = "^1.0.0"


[tool.poetry.group.dev.dependencies]
sphinx = "^6.1.3"


[tool.poetry.group.test.dependencies]
httpx = "^0.23.3"
pytest-cov = "^4.0.0"
pytest = "^7.2.2"

[tool.pytest.ini_options]
pythonpath = ["."]


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
